# python-project-52

./: .gitignore  Makefile  README.md  build.sh  db.sqlite3  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: lint_check.yml  test_cov.yml
task_manager/: mixins.py  settings.py  urls.py  views.py
task_manager/fixtures/: label.json  status.json  task.json  test_task.json  test_users.json  user.json
task_manager/labels/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_created_at_alter_status_name.py  0003_alter_status_options_alter_status_name.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_status.py  0003_task_label.py  0004_remove_task_label_tasklabels_task_labels.py  0005_alter_task_executor_alter_task_labels.py  0006_alter_task_executor_alter_task_labels.py  0007_alter_task_executor_alter_task_labels.py  0008_alter_task_author_alter_task_executor_and_more.py  0009_alter_task_body_alter_task_name.py  0010_rename_body_task_description.py
task_manager/tasks/tests/: test_post.py  test_view.py  testcase.py
task_manager/templates/: base.html  delete.html  delete_parent.html  footer.html  home.html  index.html  navbar.html
task_manager/templates/labels/: create.html  (+3 more)
task_manager/users/: forms.py  models.py  tests.py  urls.py  views.py
(+20 files in other folders)
